[package]
authors     = ["SoonIter"]
description = "rust version port of find_up js version"
edition     = "2021"
name        = "j2rs_find_up_simple"
readme      = "README.md"
repository  = "https://github.com/SoonIter/j2rs.git"
version     = "0.0.1"

license = "MIT"

[dependencies]

[dev-dependencies]
criterion    = "0.5"
lets_find_up = "0.0.3"
sugar_path   = "0.0.12"


[[bench]]
harness = false
name    = "basic_parent_dir"

[[bench]]
harness = false
name    = "no_result"
