[package]
authors     = ["SoonIter"]
description = "rust version port of package-up"
edition     = "2021"
name        = "j2rs_package_up"
readme      = "README.md"
repository  = "https://github.com/SoonIter/j2rs.git"
version     = "0.0.1"

license = "MIT"

[dependencies]
j2rs_find_up_simple = { path = "../j2rs_find_up_simple", version = "0.0.2" }

[dev-dependencies]
sugar_path = "0.0.12"
