[package]
authors     = ["SoonIter"]
description = "rust version port of package-up"
edition     = "2021"
name        = "j2rs_strip_ansi"
readme      = "README.md"
repository  = "https://github.com/SoonIter/j2rs.git"
version     = "0.0.1"

license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-regex  = "0.1.0"
lazy_static = "1.4.0"
regex       = "1.10.2"

[dev-dependencies]
picocolors = "0.1.0"
